--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
 
 
 
-    <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+    <footer class="bg-success text-center text-light p-5">
+        <p class="mb-0 fs-4">&copy;2021 Mario Gamin. Todos los derechos reservados.</p>
     </footer>
 
 
