--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </section>
 
 
-    <section id="Mis-trabajos" class="my-5 p-5 bg-info">
+    <section id="Mis-trabajos" class="my-5 p-5 bg-success">
 
         <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
 
@@ -125,7 +125,7 @@
                             repudiandae neque rem adipisci repellendus libero illo quo
                             blanditiis, velit quasi ad, recusandae voluptates officia.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-success">
                             Ver más
                         </button>
                     </div>
